user DB 수정 + 버스 예매 관련 클래스 수정 + 연관 관계 추가